зміна фоток на jpg

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
             <li>
-                <img src="./imeges/img1.svg" alt="стол с компюьтером" width="370">
+                <img src="./imeges/img1.jpg" alt="стол с компюьтером" width="370">
             </li>
             <li>
-                <img src="./imeges/img2.svg" alt="стол с ноутбуком" width="370">
+                <img src="./imeges/img2.jpg" alt="стол с ноутбуком" width="370">
             </li>
             <li>
-                <img src="./imeges/img3.svg" alt="стол с планшетом" width="370">
+                <img src="./imeges/img3.jpg" alt="стол с планшетом" width="370">
             </li>
         </ul>
     </section>
@@ -77,22 +77,22 @@
         <h2> Наша команда</h2>
         <ul>
             <li>
-                <img src="./imeges/igor.svg" alt="Игорь Демьяненко" width="270">
+                <img src="./imeges/igor.jpg" alt="Игорь Демьяненко" width="270">
                 <h3>Игорь Демьяненко</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="./imeges/olga.svg" alt="Ольга Репина" width="270">
+                <img src="./imeges/olga.jpg" alt="Ольга Репина" width="270">
                 <h3>Ольга Репина</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./imeges/nikola.svg" alt="Николай Тарасов" width="270">
+                <img src="./imeges/nikola.jpg" alt="Николай Тарасов" width="270">
                 <h3>Николай Тарасов</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./imeges/mihail.svg" alt="Михаил Ермаков" width="270">
+                <img src="./imeges/mihail.jpg" alt="Михаил Ермаков" width="270">
                 <h3>Михаил Ермаков</h3>
                 <p>UI Designer</p>
             </li>
@@ -101,10 +101,15 @@
     </main>    
 
     <footer>
-        <p>WebStudio</p>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <p>info@example.com</p>
-        <p>+38 099 111 11 11</p>
+        <a href="">
+            WebStudio
+        </a>
+     
+      <ul>
+            <li>г. Киев, пр-т Леси Украинки, 26</li>
+            <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+            <li> <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a> </li>
+        </ul>
 
     </footer>
 </body>
