--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <ul>
             <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-            <li> <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a> </li>
+            <li> <a href="tel:+380961111111">+38 096 111 11 11</a> </li>
         </ul>
         </nav>
     </header>  
@@ -35,7 +35,7 @@
     </div>
 
     <section>
-        <h2></h2>
+        <!-- <h2>   </h2> -->
         <ul>
             <li>
                 <h3>Внимание к деталям</h3>
@@ -108,7 +108,7 @@
       <ul>
             <li>г. Киев, пр-т Леси Украинки, 26</li>
             <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-            <li> <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a> </li>
+            <li> <a href="tel:+380961111111">+38 096 111 11 11</a> </li>
         </ul>
 
     </footer>
